--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
     <div id="test">
+        test lock w/ unadjustedMovement
+    </div>
+    <div id="test2">
         test lock
     </div>
     <div id="movementx"></div>
     <script>
         let test_element = document.getElementById("test");
+        let test_element2 = document.getElementById("test2");
         let movement = document.getElementById("movementx");
         let recorded_movements = [];
         let locked = false;
@@ -12,6 +16,13 @@
         test_element.addEventListener('click', async () => {
             await(test_element.requestFullscreen());
             test_element.requestPointerLock({unadjustedMovement:true}).catch(err => {
+                console.log('error', err);
+            });
+        });
+
+        test_element2.addEventListener('click', async () => {
+            await(test_element.requestFullscreen());
+            test_element.requestPointerLock().catch(err => {
                 console.log('error', err);
             });
         });
